added tests for the plugins command layer
- moved the logic to calculate sha1 values to configv3

[#126256941]

Signed-off-by: Nick Wei <nwei@pivotal.io>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -1796,6 +1796,10 @@
     "translation": "Berechnung von sha1 für installierte Plug-ins. Dieser Vorgang kann eine Weile dauern..."
   },
   {
+    "id": "Computing sha1 for installed plugins, this may take a while...",
+    "translation": ""
+  },
+  {
     "id": "Connected, dumping recent logs for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...\n",
     "translation": "Verbundene, kürzlich erstellte Speicherauszugsprotokolle für App {{.AppName}} in Organisation {{.OrgName}} / Bereich {{.SpaceName}} als {{.Username}}...\n"
   },
@@ -3730,6 +3734,10 @@
   {
     "id": "Listing Installed Plugins...",
     "translation": "Auflisten installierter Plug-ins..."
+  },
+  {
+    "id": "Listing installed plugins...",
+    "translation": ""
   },
   {
     "id": "Local port forward specification. This flag can be defined more than once.",
@@ -6264,6 +6272,14 @@
     "translation": ""
   },
   {
+    "id": "command help",
+    "translation": ""
+  },
+  {
+    "id": "command name",
+    "translation": ""
+  },
+  {
     "id": "cpu",
     "translation": "CPU"
   },
@@ -6534,6 +6550,10 @@
   {
     "id": "plans",
     "translation": "Pläne"
+  },
+  {
+    "id": "plugin name",
+    "translation": ""
   },
   {
     "id": "port",
