--- a/cf/i18n/resources/fr-fr.untranslated.json
+++ b/cf/i18n/resources/fr-fr.untranslated.json
@@ -760,6 +760,10 @@
     "translation": "Commands offered by installed plugins:"
   },
   {
+    "id": "Computing sha1 for installed plugins, this may take a while...",
+    "translation": ""
+  },
+  {
     "id": "Could not find service",
     "translation": "Could not find service"
   },
@@ -949,6 +953,10 @@
   },
   {
     "id": "List tasks of an app",
+    "translation": ""
+  },
+  {
+    "id": "Listing installed plugins...",
     "translation": ""
   },
   {
@@ -1648,6 +1656,14 @@
     "translation": "cf target -s"
   },
   {
+    "id": "command help",
+    "translation": ""
+  },
+  {
+    "id": "command name",
+    "translation": ""
+  },
+  {
     "id": "create-isolation-segment",
     "translation": ""
   },
@@ -1726,6 +1742,10 @@
   {
     "id": "plans",
     "translation": "plans"
+  },
+  {
+    "id": "plugin name",
+    "translation": ""
   },
   {
     "id": "port",
