--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -768,6 +768,10 @@
     "translation": "Commands offered by installed plugins:"
   },
   {
+    "id": "Computing sha1 for installed plugins, this may take a while...",
+    "translation": ""
+  },
+  {
     "id": "Could not find service",
     "translation": "Could not find service"
   },
@@ -961,6 +965,10 @@
   },
   {
     "id": "List tasks of an app",
+    "translation": ""
+  },
+  {
+    "id": "Listing installed plugins...",
     "translation": ""
   },
   {
@@ -1652,6 +1660,14 @@
     "translation": "cf target -s"
   },
   {
+    "id": "command help",
+    "translation": ""
+  },
+  {
+    "id": "command name",
+    "translation": ""
+  },
+  {
     "id": "cpu",
     "translation": "cpu"
   },
@@ -1721,6 +1737,10 @@
   },
   {
     "id": "org:",
+    "translation": ""
+  },
+  {
+    "id": "plugin name",
     "translation": ""
   },
   {
