--- a/cf/i18n/resources/ko-kr.untranslated.json
+++ b/cf/i18n/resources/ko-kr.untranslated.json
@@ -1164,6 +1164,10 @@
     "translation": "Commands offered by installed plugins:"
   },
   {
+    "id": "Computing sha1 for installed plugins, this may take a while...",
+    "translation": ""
+  },
+  {
     "id": "Could not find service",
     "translation": "Could not find service"
   },
@@ -1357,6 +1361,10 @@
   },
   {
     "id": "List tasks of an app",
+    "translation": ""
+  },
+  {
+    "id": "Listing installed plugins...",
     "translation": ""
   },
   {
@@ -2044,6 +2052,14 @@
     "translation": "cf target -s"
   },
   {
+    "id": "command help",
+    "translation": ""
+  },
+  {
+    "id": "command name",
+    "translation": ""
+  },
+  {
     "id": "create-isolation-segment",
     "translation": ""
   },
@@ -2105,6 +2121,10 @@
   },
   {
     "id": "org:",
+    "translation": ""
+  },
+  {
+    "id": "plugin name",
     "translation": ""
   },
   {
