--- a/cf/i18n/resources/zh-hans.untranslated.json
+++ b/cf/i18n/resources/zh-hans.untranslated.json
@@ -1168,6 +1168,10 @@
     "translation": "Commands offered by installed plugins:"
   },
   {
+    "id": "Computing sha1 for installed plugins, this may take a while...",
+    "translation": ""
+  },
+  {
     "id": "Could not find service",
     "translation": "Could not find service"
   },
@@ -1377,6 +1381,10 @@
   },
   {
     "id": "List tasks of an app",
+    "translation": ""
+  },
+  {
+    "id": "Listing installed plugins...",
     "translation": ""
   },
   {
@@ -2104,6 +2112,14 @@
     "translation": "cf target -s"
   },
   {
+    "id": "command help",
+    "translation": ""
+  },
+  {
+    "id": "command name",
+    "translation": ""
+  },
+  {
     "id": "create-isolation-segment",
     "translation": ""
   },
@@ -2165,6 +2181,10 @@
   },
   {
     "id": "org:",
+    "translation": ""
+  },
+  {
+    "id": "plugin name",
     "translation": ""
   },
   {
